--- a/public/pages/pb.html
+++ b/public/pages/pb.html
@@ -77,14 +77,13 @@ html {
 
 <div class="about-section">
   <h1>About Us Page</h1>
-  <p>Here is some text about who we are and what we do.</p>
+  <h2>Here is some information on me Our Team and Programmes</h2>
 </div>
 
-<h2 style="text-align:center">Our Team</h2>
-<div class="row">
+
   <div class="column">
     <div class="card">
-      <img src="/images/anon.jpg" alt="Cathal" style="width:100%">
+      <img src="/images/Cathal.jpg" alt="Cathal" style="width:100%">
       <div class="container">
         <h2>Cathal Walsh</h2>
         <p class="title">Founder and Developer</p>
@@ -94,39 +93,25 @@ html {
       </div>
     </div>
   </div>
-
   <div class="column">
     <div class="card">
-      <img src="/images/anon.jpg" alt="Ryan" style="width:100%">
+      <h2>Programmes Developed</h2>
+      <img src="/images/greenhouse.jpg" alt="Cathal" style="width:100%">
       <div class="container">
-        <h2>Ryan Murray</h2>
-        <p class="title">Founder and Developer</p>
-        <p>Software Engineering Student in GMIT Galway</p>
-        <p>G00340535@gmit.ie</p>
-        <p><button class="button">Contact</button></p>
+        <h3>Auto - Garden</h3>
+        <img src="/images/temp.jpg" alt="Cathal" style="width:100%">
+        <h3>Auto - Water</h3>
       </div>
     </div>
   </div>
 
-  <div class="column">
-    <div class="card">
-      <img src="/images/anon.jpg" alt="Cillin" style="width:100%">
-      <div class="container">
-        <h2>Cillin Prendergast</h2>
-        <p class="title">Founder and Developer</p>
-        <p>Software Engineering Student in GMIT Galway</p>
-        <p>G00338023@gmit.ie</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 </body>
 <br>
 <br>
-<a href="/pages/pa.html">Go Back</a>
+<a href="/getTemp">Go Back</a>
 <br><br>
-<a href="/">Home Page</a>
+<a href="/getTemp">Home Page</a>
 </body>
 </html>
